Update creat css

--- a/plano-de-saude/index.html
+++ b/plano-de-saude/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <!--google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!--google fonts-->
     <title>Maciel Med</title>
+
 </head>
 <body>
     <header>
@@ -16,7 +23,8 @@
                 <li><a href="#">Plano</a></li>
             </ul>
         </nav>
-        <button>Escolha seu plano</button>
+        <button>Login</button>
+        <button>Cadastrar</button>
     </header>
     <main>
         <h2>Seja bem vindo ao Maciel <span>Med</span> </h2>
