--- a/plano-de-saude/index.html
+++ b/plano-de-saude/index.html
@@ -29,10 +29,10 @@
     <main>
         <h2>Seja bem vindo ao Maciel <span>Med</span>.</h2>
         <section class="dados">
-            <input type="text" name="nome" id="nome" placeholder="Nome do cliente">
+            <input type="number" name="valorBase" id="valorBase" placeholder="Digite o valor base do plano">
             <input type="number" name="idade" id="idade" placeholder="Idade do cliente">
 
-            <input type="submit" onclick="calcularPlano()" value="calcular plano de saude" class="botao-calcular">
+            <input type="submit" id="calcular" onclick="calcular()" value="calcular plano de saude" class="botao-calcular">
 
         </section>
         <section id="resposta">
