--- a/plano-de-saude/index.html
+++ b/plano-de-saude/index.html
@@ -29,8 +29,8 @@
     <main>
         <h2>Seja bem vindo ao Maciel <span>Med</span>.</h2>
         <section class="dados">
-            <input type="number" name="valorBase" id="valorBase" placeholder="Digite o valor base do plano">
-            <input type="number" name="idade" id="idade" placeholder="Idade do cliente">
+            <input type="number" name="valorBase" id="valorBase" placeholder="Digite o valor base do plano" required>
+            <input type="number" name="idade" id="idade" placeholder="Idade do cliente" required>
 
             <input type="submit" id="calcular" onclick="calcular()" value="calcular plano de saude" class="botao-calcular">
 
