vercionamento de telas

--- a/plano-de-saude/index.html
+++ b/plano-de-saude/index.html
@@ -9,13 +9,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!--google fonts-->
+    
     <title>Maciel Med</title>
 
 </head>
 <body>
     <header>
         <h1>Maciel <span>Med</span></h1>
-        <nav>
+        <nav class="navegacao">
             <ul>
                 <li><a href="#">Plano</a></li>
                 <li><a href="#">Plano</a></li>
