--- a/plano-de-saude/index.html
+++ b/plano-de-saude/index.html
@@ -25,10 +25,10 @@
             
         <nav class="navegacao" id="navegacao">
             <ul>
-                <li><a href="#">Plano</a></li>
-                <li><a href="#">Plano</a></li>
-                <li><a href="#">Plano</a></li>
-                <li><a href="#">Plano</a></li>
+                <li><a href="#">Dentista</a></li>
+                <li><a href="#">Psicologia</a></li>
+                <li><a href="#">Pediatria</a></li>
+                <li><a href="#">Ortopedista</a></li>
             </ul>
         </nav>
         <button>Login</button>
