update html css

--- a/plano-de-saude/index.html
+++ b/plano-de-saude/index.html
@@ -31,8 +31,8 @@
                 <li><a href="#">Ortopedista</a></li>
             </ul>
         </nav>
-        <button>Login</button>
-        <button>Cadastrar</button>
+        <button><a href="#" id="btlog">Login</a></button>
+        <button><a href="#" id="btlog">Cadastrar</a></button>
         
     </header>
     <main>
