pagina de cadastro

--- a/plano-de-saude/index.html
+++ b/plano-de-saude/index.html
@@ -32,7 +32,7 @@
             </ul>
         </nav>
         <button><a href="#" id="btlog">Login</a></button>
-        <button><a href="#" id="btlog">Cadastrar</a></button>
+        <button><a href="cadastro.html" id="btlog">Cadastrar</a></button>
         
     </header>
     <main>
