--- a/cadastro.html
+++ b/cadastro.html
@@ -50,7 +50,7 @@
       
     </main>
 
-    <script src="app.js"></script>
+    <script src="plano-de-saude/app.js"></script>
     
 </body>
 </html>
