--- a/plano-de-saude/cadastro.html
+++ b/plano-de-saude/cadastro.html
@@ -30,7 +30,8 @@
                     <li><a href="#">Ortopedista</a></li>
                 </ul>
             </nav>
-            <button><a href="#" id="btlog">Login</a></button>                       
+            <button><a href="#" id="btlog">Login</a></button>
+            <button><a href="index.html" id="btlog">Voltar</a></button>                       
         </header>
     </header>
     <main>
